--- a/_columns/Swing_Trading/zh-cn/2024-11-08.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-08.md
@@ -21,16 +21,14 @@ Specifically, we'll get leveraged counterparts like the **2X ProShares Ultra S&P
 
 
 
-Strong September for S&P 500标准普尔 500 指数 9 月表现强劲
------------------------------------------------
+Strong September for S&P 500
+----------------------------
 
 
-Our most recent closed trade for the S&P 500 started with a [big outside day and recovery](https://www.investors.com/market-trend/the-big-picture/stocks-market-dow-jones-nasdaq-sp500-inflation/) after a Consumer Price Index (CPI) report shook markets **(1)**. We started increasing exposure with some individual stocks and then went with the 2X leveraged SSO trade the next day **(2)**.  
-我们最近标准普尔 500 指数的收盘交易始于[一个大的外部交易日，并在](https://www.investors.com/market-trend/the-big-picture/stocks-market-dow-jones-nasdaq-sp500-inflation/)消费者价格指数 （CPI） 报告震撼市场后出现反弹 **（1）。**我们开始增加一些个股的敞口，然后在第二天 **（2）** 进行了 2 倍杠杆 SSO 交易。
+Our most recent closed trade for the S&P 500 started with a [big outside day and recovery](https://www.investors.com/market-trend/the-big-picture/stocks-market-dow-jones-nasdaq-sp500-inflation/) after a Consumer Price Index (CPI) report shook markets **(1)**. We started increasing exposure with some individual stocks and then went with the 2X leveraged SSO trade the next day **(2)**.  
 
 
-Even though we started with a full position, we quickly added to make a double position. First we added after we made some progress **(3)**. Then we added on a strong move after the Fed cut rates by 50 basis points **(4)**.  
-尽管我们从一个完整的位置开始，但我们很快就增加了一个双倍的位置。首先，我们在取得一些进展后添加了 **（3）。**然后，在美联储降息 50 个基点后，我们增加了一个强劲的举措 **（4）。**
+Even though we started with a full position, we quickly added to make a double position. First we added after we made some progress **(3)**. Then we added on a strong move after the Fed cut rates by 50 basis points **(4)**.  
 
 
 
@@ -38,8 +36,7 @@ Even though we started with a full position, we quickly added to make a double p
 ---
 
 
-[**After Strong postelection Rally, Is There Reason To Approach With Caution?  
-在选后强劲反弹之后，是否有理由谨慎行事？**](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+[**After Strong postelection Rally, Is There Reason To Approach With Caution?**](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
 
 
 
@@ -106,8 +103,7 @@ Mark Minervini 对动荡的市场提出了这个违反直觉的建议](https://w
 弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
 
 
 
