--- a/_columns/Swing_Trading/zh-cn/2024-11-29.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-29.md
@@ -11,7 +11,8 @@ author: JUSTIN NIELSEN
 
 
 
-When most people think of swing trading, stocks with big moves and lots of volatility might be what comes to mind. But a recent trade in insurance stocks through an ETF made a fine profit. How do you determine if it's enough? Relative strength is a good gauge as to whether your investment is paying off.  
+When most people think of swing trading, stocks with big moves and lots of volatility might be what comes to mind. But a recent trade in insurance stocks through an ETF made a fine profit. How do you determine if it's enough? Relative strength is a good gauge as to whether your investment is paying off.  
+当大多数人想到波段交易时，可能会想到波动较大且波动较大的股票。但最近通过 ETF 进行的保险股交易获得了丰厚的利润。你如何确定它是否足够？相对强度是衡量您的投资是否得到回报的好指标。
 
 
 
