--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -15,7 +15,7 @@ The stock market cooled off Wednesday, as the Nasdaq composite ended a four-day 
 
 
 Investors took some profits ahead of the Thanksgiving holiday. The Nasdaq lost 0.6% while the S&P 500 fell 0.4% and continued to arm-wrestle the 6,000 level. The Oct. 23 distribution day for the S&P dropped off because 25 days have passed.  
-投资者在感恩节假期前获利了结。纳斯达克指数下跌 0.6%，而标准普尔 500 指数下跌 0.4%，并继续在 6,000 点水平上搏斗。标准普尔指数的 10 月 23 日分发日因 25 天已过去而下降。
+投资者在感恩节假期前获利了结。纳斯达克指数下跌 0.6%，而标准普尔 500 指数下跌 0.4%，并继续在 6,000 点水平上搏斗。标准普尔指数的 10 月 23 日分发日下降，因为已经过去了 25 天。
 
 
 
@@ -52,44 +52,35 @@ While selling certainly wasn't isolated to the technology sector, it was the are
 **CrowdStrike** （[CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)） [的当前季度前景](https://www.investors.com/news/technology/crowdstrike-stock-crowdstrike-earnings-news-q32024/)和**戴尔** （[DELL](https://research.investors.com/quote.aspx?symbol=DELL)） [疲软的销售前景](https://www.investors.com/news/technology/dell-stock-slips-as-revenue-misses-forecasts-despite-earnings-beat/)也损害了该行业。**惠普** （[HPQ）](https://research.investors.com/quote.aspx?symbol=HPQ) 在[给出阴云密布的前景](https://www.investors.com/news/technology/hp-stock-earnings-q4-2024-hp-news/)后暴跌超过 11%。**Workday** （[WDAY）](https://research.investors.com/quote.aspx?symbol=WDAY) 提供的[订阅收入前景低于浏览量](https://www.investors.com/news/technology/workday-stock-workday-earnings-news-q32024/)，销量下降超过 6%。戴尔和惠普是标准普尔 500 指数中表现最差的股票。
 
 
-Real Estate Select Sector SPDR ([XLRE](https://research.investors.com/quote.aspx?symbol=XLRE)) led the S&P sectors, up 0.7%. Several breakouts were seen in real estate investment trusts, including **Essential Property Realty** ([EPRT](https://research.investors.com/quote.aspx?symbol=EPRT)) and **AvalonBay Communities** ([AVB](https://research.investors.com/quote.aspx?symbol=AVB)).  
-房地产精选板块 SPDR （[XLRE）](https://research.investors.com/quote.aspx?symbol=XLRE) 领涨标准普尔板块，上涨 0.7%。房地产投资信托基金出现了几次突破，包括 **Essential Property Realty** （[EPRT](https://research.investors.com/quote.aspx?symbol=EPRT)） 和 **AvalonBay Communities** （[AVB](https://research.investors.com/quote.aspx?symbol=AVB)）。
+Real Estate Select Sector SPDR ([XLRE](https://research.investors.com/quote.aspx?symbol=XLRE)) led the S&P sectors, up 0.7%. Several breakouts were seen in real estate investment trusts, including **Essential Property Realty** ([EPRT](https://research.investors.com/quote.aspx?symbol=EPRT)) and **AvalonBay Communities** ([AVB](https://research.investors.com/quote.aspx?symbol=AVB)).  
 
 
-Financials also climbed. **The Hartford** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)) broke out of a flat base, although in light trading. **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) also broke out of a flat base but closed below the 585.82 buy point.  
-金融股也攀升。**哈特福德** （[HIG](https://research.investors.com/quote.aspx?symbol=HIG)） 从平坦的基础中突破出来，尽管交易清淡。**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 也突破了平坦的底部，但收于 585.82 买入点下方。
+Financials also climbed. **The Hartford** ([HIG](https://research.investors.com/quote.aspx?symbol=HIG)) broke out of a flat base, although in light trading. **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) also broke out of a flat base but closed below the 585.82 buy point.  
 
 
-In general, growth stocks continue to perform well. The Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) — which is designed to capture breakouts to new highs — is up 11.5% this month. That would make it the fund's best month in almost four years.  
-总体而言，成长型股票继续表现良好。旨在捕捉突破创下新高的 Innovator IBD Breakout Opportunities ETF （[BOUT）](https://research.investors.com/quote.aspx?symbol=BOUT) 本月上涨了 11.5%。这将使其成为该基金近四年来表现最好的一个月。
+In general, growth stocks continue to perform well. The Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) — which is designed to capture breakouts to new highs — is up 11.5% this month. That would make it the fund's best month in almost four years.  
 
 
-But the IBD 50 index underperformed with a 1% drop Wednesday.  
-但 IBD 50 指数周三表现不佳，下跌 1%。
+But the IBD 50 index underperformed with a 1% drop Wednesday.  
 
 
-If there's anything to complain about is that the November rally has left most quality stocks extended from buy areas. The more-recent breakouts in the [MarketSurge 250 index](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) have come from a mix of financial, energy, defense, tech and consumer companies.  
-如果有什么可抱怨的，那就是 11 月的反弹使大多数优质股票从买入区域延伸。[MarketSurge 250 指数](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)最近的突破来自金融、能源、国防、科技和消费公司的混合。
+If there's anything to complain about is that the November rally has left most quality stocks extended from buy areas. The more-recent breakouts in the [MarketSurge 250 index](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) have come from a mix of financial, energy, defense, tech and consumer companies.  
 
 
-Stock Market Seasonal Trends Favorable股市季节性趋势有利
------------------------------------------------
+Stock Market Seasonal Trends Favorable
+--------------------------------------
 
 
-Investors can be thankful for the stock market's blessings this year. The Nasdaq is up 27% and the S&P 500 has risen close to 26% year to date.  
-投资者可以感谢今年股市的祝福。纳斯达克指数上涨了 27%，标准普尔 500 指数今年迄今上涨了近 26%。
+Investors can be thankful for the stock market's blessings this year. The Nasdaq is up 27% and the S&P 500 has risen close to 26% year to date.  
 
 
-Friday's half session will cap a month in which the S&P and Nasdaq have moved up more than 5%. And next week, December brings a historically favorable trend for the stock market.  
-周五的半个交易日将结束标准普尔和纳斯达克指数上涨超过 5% 的一个月。下周，12 月为股市带来了历史上的有利趋势。
+Friday's half session will cap a month in which the S&P and Nasdaq have moved up more than 5%. And next week, December brings a historically favorable trend for the stock market.  
 
 
-Adam Turnquist, Chief Technical Strategist for LPL Financial, says that since 1950, the S&P 500 has generated an average gain of 1.8% from Thanksgiving through year-end. The index has finished higher about 70% of the time. By comparison, the broad market's average gain is 1% — and up 63% of the time — during all six-week periods.  
-LPL Financial 首席技术策略师 Adam Turnquist 表示，自 1950 年以来，标准普尔 500 指数从感恩节到年底的平均涨幅为 1.8%。该指数在大约 70% 的时间里收盘走高。相比之下，在所有六周期间，大盘的平均涨幅为 1%，并且在 63% 的时间里上涨。
+Adam Turnquist, Chief Technical Strategist for LPL Financial, says that since 1950, the S&P 500 has generated an average gain of 1.8% from Thanksgiving through year-end. The index has finished higher about 70% of the time. By comparison, the broad market's average gain is 1% — and up 63% of the time — during all six-week periods.  
 
 
-"When the index is higher on the year into Turkey Day, the average gain into year-end bumps up to 2.1%, with 75% of occurrences yielding positive results," he added.  
-“当指数在火鸡节的一年中走高时，年终的平均涨幅会上升到 2.1%，其中 75% 的事件产生了积极的结果，”他补充道。
+"When the index is higher on the year into Turkey Day, the average gain into year-end bumps up to 2.1%, with 75% of occurrences yielding positive results," he added.  
 
 
 The Stock Trader's Almanac says December is one of the top three months of the year. The Dow and Nasdaq have climbed an average of 1.6% since 1950 and the S&P is up 1.5% on average.  
@@ -113,7 +104,7 @@ The Fed tends to put more weight on core PCE, which removes food and energy pric
 
 
 Initial claims for unemployment benefits stayed at [213,000 the most recent week](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top), below the 217,000 estimate culled by Econoday. The revised [third-quarter GDP climbed 2.8%](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits), same as in the initial estimate and equal with forecasts.  
-最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测相同。
+最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测持平。
 
 
 Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html) of a quarter-point rate cut at the Fed's December meeting to 70% vs. about 60% on Tuesday. Those odds crept higher the past week.  
