--- a/_columns/Swing_Trading/zh-cn/2024-11-01.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-01.md
@@ -11,7 +11,8 @@ author: JUSTIN NIELSEN
 
 
 
-Indexes ran into some trouble this week as they plunged below their [21-day exponential moving averages](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). It's a reminder how booking some profits when you have them can help weather some of these storm clouds. **Clear Secure** ([YOU](https://research.investors.com/quote.aspx?symbol=YOU)) wasn't broken by any means and isn't far from all-time highs. But exiting when we did avoided getting shaken out of Clear Secure stock at a worse price.  
+Indexes ran into some trouble this week as they plunged below their [21-day exponential moving averages](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). It's a reminder how booking some profits when you have them can help weather some of these storm clouds. **Clear Secure** ([YOU](https://research.investors.com/quote.aspx?symbol=YOU)) wasn't broken by any means and isn't far from all-time highs. But exiting when we did avoided getting shaken out of Clear Secure stock at a worse price.  
+指数本周遇到了一些麻烦，因为它们跌破了 [21 天的指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。这提醒我们，当你有利润时，预订一些利润如何帮助度过其中一些风暴云。**Clear Secure** （[YOU](https://research.investors.com/quote.aspx?symbol=YOU)） 没有以任何方式被打破，距离历史高点不远了。但是当我们退出时退出，可以避免以更糟糕的价格从 Clear Secure 股票中被淘汰。
 
 
 
