--- a/_columns/The_Big_Picture/zh-cn/2024-11-22.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-22.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Drives Higher Ahead Of Thanksgiving; Inflation Data, Fed Minutes Due	感恩节前股市走高;通胀数据，美联储会议纪要到期
+  Stock Market Drives Higher Ahead Of Thanksgiving; Inflation Data, Fed Minutes Due
 date: 2024-11-22 17:29 -0800
 author: MICHAEL LARKIN
 ---
@@ -10,12 +10,10 @@ author: MICHAEL LARKIN
 
 
 
-The stock market ended higher in the final week before Thanksgiving. Now more inflation data and the latest Federal Reserve minutes are due.  
-股市在感恩节前的最后一周收高。现在，更多的通胀数据和最新的美联储会议纪要即将公布。
+The stock market ended higher in the final week before Thanksgiving. Now more inflation data and the latest Federal Reserve minutes are due.  
 
 
-The Nasdaq composite flirted with negative territory before rallying to end Friday up 0.2%. This allowed the tech-heavy index to post a weekly gain of 1.7% and put it back above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). The Nasdaq has climbed in two of the past three weeks and has increased 26.6% so far for 2024.  
-纳斯达克综合指数在下跌区域徘徊，周五反弹收盘上涨 0.2%。这使得这个以科技股为主的指数每周上涨 1.7%，并使其回到其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)上方。纳斯达克指数在过去三周中的两周上涨，2024 年迄今上涨了 26.6%。
+The Nasdaq composite flirted with negative territory before rallying to end Friday up 0.2%. This allowed the tech-heavy index to post a weekly gain of 1.7% and put it back above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). The Nasdaq has climbed in two of the past three weeks and has increased 26.6% so far for 2024.  
 
 
 
