--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-25.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-25.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  TJX, IBD Stock Of The Day, Actionable After Earnings, Target Hikes	TJX，今日 IBD 股票，财报后可操作，目标加息
+  TJX, IBD Stock Of The Day, Actionable After Earnings, Target Hikes
 image: /assets/img/stock-of-the-day/2024-11-25.jpg
 date: 2024-11-25 13:41 -0800
 author: HARRISON MILLER
