--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-27.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Dow Jones Giant Eyes Third Breakout After 40% Rally	道琼斯巨人指数在上涨 40% 后第三次突破
+  Dow Jones Giant Eyes Third Breakout After 40% Rally
 image: /assets/img/stock-of-the-day/2024-11-27.jpg
 date: 2024-11-27 16:32 -0800
 author: APARNA NARAYANAN
