--- a/_columns/Swing_Trading/zh-cn/2024-11-22.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-22.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Relative Strength Line: Good Guide For Buys And Sells In Postelection Bump
+  Relative Strength Line: Good Guide For Buys And Sells In Postelection Bump	相对强弱线：选后颠簸中买入和卖出的良好指南
 date: 2024-11-22 16:50 -0800
 image: /assets/img/swing-trading/2024-11-22.jpg
 author: JUSTIN NIELSEN
