--- a/_columns/Swing_Trading/zh-cn/2024-11-29.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-29.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Are Insurance Stocks Too Slow For Swing Trading?
+  Are Insurance Stocks Too Slow For Swing Trading?	保险股对于波段交易来说太慢了吗？
 date: 2024-11-29 16:40 -0800
 image: /assets/img/swing-trading/2024-11-29.jpg
 author: JUSTIN NIELSEN
