--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
@@ -1,19 +1,7 @@
 ---
 layout: page
 title: >-
-  Embraer, IBD Stock Of The Day, Breaks Out To 10-Year Highs	
-
-
-
-
-
-重试
-  
-        
-
-
-
-错误原因
+  Embraer, IBD Stock Of The Day, Breaks Out To 10-Year Highs	Embraer 是当今 IBD 股票，突破 10 年高点
 image: /assets/img/stock-of-the-day/2024-11-26.jpg
 date: 2024-11-26 13:11 -0800
 author: HARRISON MILLER
@@ -24,261 +12,93 @@ author: HARRISON MILLER
 
 
 
-Brazilian aerospace manufacturer Embraer is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Tuesday as shares surged to a 10-year high.[重试
-  
- 
+Brazilian aerospace manufacturer Embraer is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Tuesday as shares surged to a 10-year high.  
 
 
 
-错误原因](javascript:void(0))
 
+**Embraer** ([ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)) produces a fleet of commercial, business and defense jets. On the commercial front, Embraer is best-known for its Embraer 175 (E175) single-aisle planes. It also manufacturers the C-390 military transport aircraft. The company's Phenom 300 has been the world's bestselling light jet for the past 12 years, according to a [May announcement](https://embraer.com/global/en/news?slug=1207346-embraers-phenom-300-leads-the-industry-in-twinjet-deliveries-and-is-the-worlds-best-selling-light-jet-for-12-consecutive-years).  
 
 
+Embraer is coming off its major [Q3 beat from Nov. 8](https://www.investors.com/news/embraer-maintains-revenue-growth-expectation/), which saw earnings increase to $1.20 per share from 18 cents the year prior. Revenue jumped 32% to $1.69 billion, with sales from its "executive aviation" and "defense and security" segments each increasing 65% compared with a year ago.  
 
-**Embraer** ([ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)) produces a fleet of commercial, business and defense jets. On the commercial front, Embraer is best-known for its Embraer 175 (E175) single-aisle planes. It also manufacturers the C-390 military transport aircraft. The company's Phenom 300 has been the world's bestselling light jet for the past 12 years, according to a [May announcement](https://embraer.com/global/en/news?slug=1207346-embraers-phenom-300-leads-the-industry-in-twinjet-deliveries-and-is-the-worlds-best-selling-light-jet-for-12-consecutive-years).[重试
-  
- 
 
+The results were well above analyst expectations for earnings of 25 cents per share on $1.58 billion in revenue.  
 
 
-错误原因](javascript:void(0))
+Embraer delivered 59 aircraft during the quarter, a 37% increase from the year prior. Executive jet deliveries totaled 41, with 16 commercial jets and two multimission C-390 aircraft. The company said that its backlog at the end of the quarter was worth $22.7 billion, marking a nine-year high and up 25% from last year.  
 
 
-Embraer is coming off its major [Q3 beat from Nov. 8](https://www.investors.com/news/embraer-maintains-revenue-growth-expectation/), which saw earnings increase to $1.20 per share from 18 cents the year prior. Revenue jumped 32% to $1.69 billion, with sales from its "executive aviation" and "defense and security" segments each increasing 65% compared with a year ago.[重试
-  
- 
+Embraer narrowed its 2024 commercial aviation delivery forecast to 70-73 planes, down from its prior guidance for 72-80. The company maintained its executive delivery outlook of 125 to 135 jets.  
 
 
+The Brazilian outfit also reiterated its full-year revenue forecast for $6 billion to $6.4 billion, with the midpoint just below analyst views for $6.3 billion.  
 
-错误原因](javascript:void(0))
 
+FactSet expects 2025 revenue increases to $7.26 billion, growing to about $8 billion in 2026.  
 
-The results were well above analyst expectations for earnings of 25 cents per share on $1.58 billion in revenue.[重试
-  
- 
 
+Analysts Shift Targets, Ratings
+-------------------------------
 
 
-错误原因](javascript:void(0))
+However, analyst ratings have been mixed in the wake of earnings.  
 
 
-Embraer delivered 59 aircraft during the quarter, a 37% increase from the year prior. Executive jet deliveries totaled 41, with 16 commercial jets and two multimission C-390 aircraft. The company said that its backlog at the end of the quarter was worth $22.7 billion, marking a nine-year high and up 25% from last year.[重试
-  
- 
+UBS in mid-November downgraded ERJ shares to sell from neutral, noting it thinks the market is "overoptimistic" heading into 2025, and results for the year may disappoint investors, The Fly reported. The firm wrote that the competitive environment is unfavorable to Embraer, as Brazil and other Latin American locations lack competitive advantages for its projects. Still UBS lifted its price target on ERJ shares to 32 from 29.  
 
 
+Elsewhere, Morgan Stanley and BofA both raised their targets on Embraer last week.  
 
-错误原因](javascript:void(0))
 
+Morgan Stanley cited Q3 results and the company's investor day presentation as evidence of "the company's strong operating performance and ongoing momentum." The firm raised its price target by $5 to 45 and kept an overweight rating on the shares.  
 
-Embraer narrowed its 2024 commercial aviation delivery forecast to 70-73 planes, down from its prior guidance for 72-80. The company maintained its executive delivery outlook of 125 to 135 jets.[重试
-  
- 
 
+BofA on Thursday  also lifted its price target on Embraer to 55 from 40 and maintained a buy rating on the stock to reflect stronger-than-expected deliveries and demand. The firm said Embraer's greatest differentiating factor is that innovation is core to the company identity. BofA also credited Embraer's strong backlog, deliveries and improving financials as "a testament to the strategy working."  
 
 
-错误原因](javascript:void(0))
+Embraer Stock Rises
+-------------------
 
 
-The Brazilian outfit also reiterated its full-year revenue forecast for $6 billion to $6.4 billion, with the midpoint just below analyst views for $6.3 billion.[重试
-  
- 
 
+Embraer trades in American Depositary Receipts (ADRs) under the ticker ERJ.  
 
 
-错误原因](javascript:void(0))
+ERJ stock surged more than 3% Tuesday to peak at 40.34, its highest level since September 2014.  
 
 
-FactSet expects 2025 revenue increases to $7.26 billion, growing to about $8 billion in 2026.[重试
-  
- 
+The move cleared a 39.46 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), matching its Nov. 13 high.  
 
 
+The latest entry formed as a [shelf pattern](https://www.investors.com/how-to-invest/investors-corner/what-is-a-shelf-pattern-and-why-it-is-perfect-pyramiding-tool-in-growth-stocks/) within a [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) for its recent flat base.  
 
-错误原因](javascript:void(0))
 
+Embraer broke out of that prior [flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/) pattern on Nov. 18.  
 
-Analysts Shift Targets, Ratings[重试
-  
- 
 
+ERJ shares rallied about 20% so far this month, adding to its almost 118% spike in 2024.  
 
 
-错误原因](javascript:void(0))
---------------------------------------------------------------------
+*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)* 
 
 
-However, analyst ratings have been mixed in the wake of earnings.[重试
-  
- 
+**YOU MAY ALSO LIKE:** 
 
 
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/) 
 
-错误原因](javascript:void(0))
 
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/) 
 
-UBS in mid-November downgraded ERJ shares to sell from neutral, noting it thinks the market is "overoptimistic" heading into 2025, and results for the year may disappoint investors, The Fly reported. The firm wrote that the competitive environment is unfavorable to Embraer, as Brazil and other Latin American locations lack competitive advantages for its projects. Still UBS lifted its price target on ERJ shares to 32 from 29.[重试
-  
- 
 
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A) 
 
 
-错误原因](javascript:void(0))
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-Elsewhere, Morgan Stanley and BofA both raised their targets on Embraer last week.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-Morgan Stanley cited Q3 results and the company's investor day presentation as evidence of "the company's strong operating performance and ongoing momentum." The firm raised its price target by $5 to 45 and kept an overweight rating on the shares.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-BofA on Thursday  also lifted its price target on Embraer to 55 from 40 and maintained a buy rating on the stock to reflect stronger-than-expected deliveries and demand. The firm said Embraer's greatest differentiating factor is that innovation is core to the company identity. BofA also credited Embraer's strong backlog, deliveries and improving financials as "a testament to the strategy working."[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-Embraer Stock Rises[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
---------------------------------------------------------
-
-
-
-Embraer trades in American Depositary Receipts (ADRs) under the ticker ERJ.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-ERJ stock surged more than 3% Tuesday to peak at 40.34, its highest level since September 2014.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-The move cleared a 39.46 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), matching its Nov. 13 high.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-The latest entry formed as a [shelf pattern](https://www.investors.com/how-to-invest/investors-corner/what-is-a-shelf-pattern-and-why-it-is-perfect-pyramiding-tool-in-growth-stocks/) within a [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) for its recent flat base.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-Embraer broke out of that prior [flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/) pattern on Nov. 18.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-ERJ shares rallied about 20% so far this month, adding to its almost 118% spike in 2024.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
-
-
-*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))*
-
-
-**YOU MAY ALSO LIKE:[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))**
-
-
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
-
-
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
-
-
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
-
-
-[Learn How To Time The Market With IBD's ETF Market Strategy[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
-
-
-[Futures: Titans Fuel S&P 500 As Bitcoin Tumbles; Big Movers Late[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp500-bitcoin-crowdstrike-earnings-movers/)
+[Futures: Titans Fuel S&P 500 As Bitcoin Tumbles; Big Movers Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp500-bitcoin-crowdstrike-earnings-movers/) 
 
 
 
